# sg-gov-newsrooms

./: CLAUDE.md  RUNBOOK.md  pyproject.toml  zeeker.toml
.github/workflows/: sync-newsrooms.yml
resources/: _token_usage.py  acra_news.py  agc_news.py  ccs_news.py  ipos_news.py  judiciary_news.py  mlaw_news.py  mom_news.py  pdpc_news.py
scripts/: backfill_summaries.py
