[project]
name = "sg-gov-newsrooms-zeeker"
version = "0.1.0"
description = "Zeeker database project for Singapore government and judiciary newsrooms"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx[socks]>=0.28.1",
    "lxml>=5.0.0",
    "openai>=1.99.6",
    "tenacity>=9.1.2",
    "zeeker>=0.9.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
